# auto-strategy-agent

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
quant-lab/: pyproject.toml
quant-lab/backtest/: __init__.py  features.py  models.py  runner.py
quant-lab/notebooks/: research.ipynb
src/: index.ts
src/config/: env.ts
src/tools/: claude-code-agent.ts  codex-agent.ts  fetch-market-data.ts  index.ts
src/types/: index.ts
